--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.30.0",
     "react-scroll": "^1.9.3",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
